[package]
name = "uwuku"
version = "0.1.0"
authors = ["n0body <stefanvesovic2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"